--- a/wiki/Roadmap.wiki
+++ b/wiki/Roadmap.wiki
@@ -3,3 +3,10 @@
 = Roadmap =
 
 Currently, GValidator is a stand-alone library with no dependencies on any other library. I would like to keep it this way as much as possible, but there is a possibility of making a Mootools port which would be much more lightweight for Mootools adopters.
+
+== Feature Wish list ==
+
+* Set required/not-required using class 'required'
+* Ability to add multiple class names to a field
+* Ability to specify formatting options (Currency, decimals spring to mind) and have the data aligned to the specification i.e. $__,__.__ or something similar
+* Ability to tailor how messages are displayed on a given field, using different elements etc.
