--- a/wiki/Roadmap.wiki
+++ b/wiki/Roadmap.wiki
@@ -1,4 +1,4 @@
-#summary GValidator roadmap and current status.
+t#summary GValidator roadmap and current status.
 
 = Roadmap =
 
@@ -6,7 +6,7 @@ Currently, GValidator is a stand-alone library with no dependencies on any other
 
 == Feature Wish list ==
 
-  * Set required/not-required using class 'required'
-  * Ability to add multiple class names to a field
+  * Set required/not-required using class 'required' - DONE
+  * Ability to add multiple class names to a field - DONE
   * Ability to specify formatting options (Currency, decimals spring to mind) and have the data aligned to the specification i.e. `$__,__.__` or something similar
   * Ability to tailor how messages are displayed on a given field, using different elements etc.
