Edited wiki page through web user interface.

--- a/wiki/Roadmap.wiki
+++ b/wiki/Roadmap.wiki
@@ -12,6 +12,7 @@ Currently, GValidator is a stand-alone library with no dependencies on any other
   * Ability to specify formatting options (Currency, decimals spring to mind) and have the data aligned to the specification i.e. `$__,__.__` or something similar
   * Ability to tailor how messages are displayed on a given field, using different elements etc.
  * Configuration based validation rules (see below)
+ * Configuration parameters separated from main code base
 
 == Incubator ==
 
