--- a/wiki/Roadmap.wiki
+++ b/wiki/Roadmap.wiki
@@ -9,8 +9,9 @@ Currently, GValidator is a stand-alone library with no dependencies on any other
 
   * Set required/not-required using class 'required' - DONE
   * Ability to add multiple class names to a field - DONE
-  * Ability to specify formatting options (Currency, decimals spring to mind) and have the data aligned to the specification i.e. `$__,__.__` or something similar
+  * Ability to specify formatting mask options (Currency, decimals spring to mind) and have the data aligned to the specification i.e. `$__,__.__` or something similar
   * Ability to tailor how messages are displayed on a given field, using different elements etc.
+ * Internationalization of error messages
  * Configuration based validation rules (see below)
  * Configuration parameters separated from main code base
 
