Edited wiki page through web user interface.

--- a/wiki/Roadmap.wiki
+++ b/wiki/Roadmap.wiki
@@ -9,13 +9,13 @@ Currently, GValidator is a stand-alone library with no dependencies on any other
 
   * Set required/not-required using class 'required' - DONE
   * Ability to add multiple class names to a field - DONE
-  * Better event handling, and custom event hooks thrown during validation cycle
+  * Better event handling, and custom event hooks thrown during validation cycle - IN PROGRESS
   * Ability to specify formatting mask options (Currency, decimals spring to mind) and have the data aligned to the specification i.e. `$__,__.__` or something similar
-  * Ability to tailor how messages are displayed on a given field, such as specifying a container for all message, inline, using different elements etc.
-  * Internationalization of error messages
+  * Ability to tailor how messages are displayed on a given field, such as specifying a container for all message, inline, using different elements etc. - IN PROGRESS
+  * Internationalization of error messages - DONE
   * Templated message types with custom messages (i.e. different templates messages for EMPTY, INVALID... fields)
   * Configuration based validation rules (see below)
-  * Configuration parameters separated from main code base
+  * Configuration parameters separated from main code base - IN PROGRESS
 
 == Incubator ==
 
