Edited wiki page through web user interface.

--- a/wiki/ContactAndContribute.wiki
+++ b/wiki/ContactAndContribute.wiki
@@ -9,6 +9,8 @@ To get involved, you will need to have a Google Code account. Once that is setup
 There are a number of ways you can help:
 
  * Improving the current version and Roadmap of GValidator
+ * Testing
+ * Performance enhancements
  * Creating a Mootools, JQuery, Dojo etc. port of GValidator
  * Updating and creating documentation
  * Website hosting for more crazy Open Source initiatives
